<resources>
    <string name="app_name">Booking</string>
    <string name="font_family">arial</string>
    <string name="font_family_other">arial</string>
    <string name="hotel_name">Hotel</string>
    <string name="hotel_category">Categoría</string>
    <string name="hotel_city">Ciudad</string>
    <string name="hotel_prize">Precio Medio:</string>
    <string name="hotel_rate">Valoración</string>
    <string name="hotel_stars">Estrellas</string>
    <string name="hotel_booked_rooms">Reservas: </string>
    <string name="detail_description">Descripción</string>
    <string name="detail_booked">Reservas:</string>
    <string name="detail_cost">Desde:</string>
    <string name="detail_button">Seleccionar</string>
    <string name="detail_room_available">Disponible:</string>
    <string name="detail_room_capacity">Capacidad:</string>
    <string name="detail_room_number">Nº Habitación:</string>
    <string name="detail_room_button">Reservar</string>
    <string name="search">Buscar</string>
    <string name="search_hotels">Hoteles, reservas, direcciones...</string>
    <string name="search_city"> Ciudad</string>
    <string name="search_date_in"> Fecha entrada</string>
    <string name="search_date_out"> Fecha salida</string>
    <string name="search_number_people">Número de personas</string>
    <string name="search_button">Buscar</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="detail_num_people">Nº Personas:</string>
    <string name="detail_nights">Total Noches:</string>
    <string name="book_room_button">Finalizar reserva</string>
    <string name="room_prize">Desde:</string>
    <string name="order">Ordenar</string>
    <string name="main_page">Volver a Buscador</string>
    <string name="register_name">Nombre</string>
    <string name="register_surename">Apellidos</string>
    <string name="register_button">Registrarse</string>
    <string name="detail_room_date_in">Fecha Entrada:</string>
    <string name="detail_room_date_out">Fecha Salida:</string>
    <string name="menu_nav_category_hotels">Categoría</string>
    <string name="menu_nav_top_hotels">Top 10</string>
    <string name="top_selection_menu_top10">Top 10</string>
    <string name="menu_nav_price_desc">Precio Desc</string>
    <string name="menu_nav_price_asc">Precio Asc</string>

    <string-array name="searchSpin">
        <item>Seleccion</item>
        <item>Todos los hoteles</item>
        <item>Los 10 hoteles mas reservados</item>
    </string-array>

    <string-array name="spinFilter">
        <item>Seleccion</item>
        <item>Por categoria</item>
        <item>Por valoracion</item>
        <item>Precio Descendente</item>
        <item>Precio Ascendente</item>
    </string-array>
    <string name="menu_top_selection_hotels">Todos los Hoteles</string>
    <string name="menu_top_selection_booked">10 Más reservados</string>
    <string name="card_include_taxes_charges">Impuestos incluidos</string>
    <string name="free_cancellation">Cancelación Gratis</string>
    <string name="layout_error_button">Reintentar</string>
    <string name="detail_hotel_center">Transporte público</string>
    <string name="detail_hotel_rooms">Habitaciones</string>
    <string name="project">Booking</string>
    <string name="card_room_yes">si</string>
    <string name="trips_text_comment">En esta página puedes ver todas las reservas que tienes. Si has hecho una reserva, pero no la ves aquí, puedes importarla usando el número de confirmación y el PIN</string>
    <string name="trips_button">Viajes completados o cancelados</string>
    <string name="error_loading_data">Error cargando datos</string>
    <string name="detail_room_end_book">Finaliza tu reserva: </string>
    <string name="detail_book_number">Número de reserva:</string>
    <string name="detail_room_price">Precio:</string>
    <string name="euro">€</string>
    <string name="row_list_room_label">Cancelación GRATIS</string>
    <string name="row_list_room_size">Tamaño: 20m</string>
    <string name="nav_main_menu_search">Buscar</string>
    <string name="nav_main_menu_trips">Viajes</string>
    <string name="nav_main_menu_login">Login</string>
    <string name="menu_nav_rate_hotels">Valoración</string>
    <string name="row_list_hotel_payment">No requerido pago por anticipado</string>

</resources>