<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".fieldSearch.view.FieldSearchActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recyclerFieldSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--LAYOUT ERROR-->
    <LinearLayout
        android:id="@+id/activity_field_search_error_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_loading_data"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@string/font_family"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/activity_field_search_button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_error_button"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <!--LOADING PROGRESSBAR-->
    <ProgressBar
        android:id="@+id/activity_field_search_loading_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"/>

</RelativeLayout>