<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:orientation="vertical"
    android:weightSum="100"
    android:padding="@dimen/general_padding"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="40"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_textinput_layout_email"
        android:layout_width="@dimen/box_login"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spaceBetween"
        android:backgroundTint="@color/teal_200"
        android:clickable="true"
        app:boxStrokeColor="@color/button"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/button"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_textinput_layout_password"
        android:layout_width="@dimen/box_login"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spaceBetween"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/button"
        app:hintTextColor="@color/button"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/login_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="@dimen/text_login"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spaceBetween"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:textSize="@dimen/header"
        android:textColor="@color/white"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/btRegisterLogin"
        android:layout_width="@dimen/text_login"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spaceBetween"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header"
        android:textColor="@color/button"
        app:strokeColor="@color/button"
        android:text="@string/register_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

    </RelativeLayout>-->

</LinearLayout>